Final Proj. done

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,10 @@ body{
   font-size: 22px;
   color: crimson;
 }
+.ri-map-pin-line{
+  font-size: 22px;
+  color: crimson;
+}
 .ri-mail-line{
   font-size: 22px;
   color: crimson;
